# satiator-rings

./: .gitignore  .gitmodules  Documents - Shortcut.lnk  background.c  background.h  bios.c  bios.h  build_SD.bat  clean.bat  clean.sh  compile - mednafen.bat  compile.bat  compile_and_run_with_yabause.bat  debug.c  debug.h  direntry.c  direntry.h  fade.c  fade.h  filelist.c  font.c  font.h  game.cue  game.elf  game.iso  game.map  gui.c  gui.h  ini.c  ini.h  main.c  main.h  makefile  options_file.c  options_file.h  pad_controllers.c  pad_controllers.h  run_with_daemon_tools_and_ssf.bat  run_with_kronos.bat  run_with_mednafen.bat  (+19 more)
Compiler/COMMON/: jo_engine_makefile
Emulators/kronos/: Changelog.txt  Comparison Chart (English).html  Kronos Lisez moi.html  Kronos Readme (English).html  Lisez moi.txt  Léeme Kronos (Español).html  Tabla comparativa (Español).html
SD/: boot.desc  satiator-rings.iso
Save-Game-Copier/: backup-mode.c  backup-satiator.c  backup.h
Save-Game-Copier/backends/: backend.c  backend.h  sat.c  satiator.c  saturn.c
cd/: BG.TGA  CHANGE.PCM  FONT - Copy.TGA  FONT.TGA  GH.TGA  MOVE.PCM  PAD.TGA  S.TGA  S2.TGA  SANSH.PCM  SBEAR.TGA  SELECT.PCM  SLIDE.PCM  THUD.PCM
cd/BG/: BG.TGA
cd/BOX/: 0S.TGA  1S.TGA  2S.TGA
cd/TEX/: BG.TGA  BG2.TGA  CONSOLE.TGA  GAME.TGA  LOGO.TGA  S1.TGA  SBOX.TGA  SELECT.TGA
cd/cd/: FONT.TGA  INTRO.PCM
iapetus/: .gitignore  CMakeLists.txt  TODO  iapetus.sln  iapetus.vcproj  iapetus.vcxproj  iapetus.vcxproj.filters
iapetus/Platform/: SegaSaturn
iapetus/doc/: CMakeLists.txt  Doxyfile.in
iapetus/src/: CMakeLists.txt  iapetus.c  iapetus.h
iapetus/src/ar/: arcomm.c  commlink.c  crc.c  crc.h  usbdev.c  usbdev.h
iapetus/src/cd/: cd.c  cd.h  cdsect.h  mpeg.h
iapetus/src/debug/: debug.c  debug.h  localex.s  remoteex.s  ubc.s
iapetus/src/examples/: CMakeLists.txt  exgui.c  exhello.c
iapetus/src/modem/: netlink.h
iapetus/src/peripherals/: smpc.h
iapetus/src/scu/: dsp.c  dsp.h  extram.c  extram.h  scudma.c  scudma.h  scuregs.h
iapetus/src/sh2/: sci.c  sci.h  sh2dma.c  sh2dma.h  sh2int.c  sh2int.h  sh2regs.h  timer.c  timer.h
iapetus/src/sound/: sound.c  sound.h
iapetus/src/sys/: bup.c  cd.c  close.c  file.h  fstat.c  lseek.c  open.c  read.c  stderr.c  stdin.c  stdout.c  sys.c  write.c
iapetus/src/sys/mem/: memb.h  slob.c  slob.h
iapetus/src/ui/: font.c  font.h  font8x16.c  font8x8.c  gui.c  gui.h  text.c  text.h  text.s
iapetus/src/video/: pal.c  rotscr.c  scrscr.c  vdp.h  vdp1.c  vdpinit.c
jo_engine/: core.c  effects.c  font.c  fs.c  image.c  malloc.c  math.c  software_renderer.c  storyboard.c  time.c  tools.c  vdp2.c
jo_engine/jo/: audio.h  background.h  backup.h  core.h  jo.h  list.h  sega_saturn.h  software_renderer.h  time.h  vdp2.h  vdp2_malloc.h
jo_engine/jo_engine/: 3d.c  audio.c  backup.c  input.c  map.c  palette.c  slave.c  (+3 more)
satiator/: elfloader.c  endian.h  jhloader.c  jhloader.h  satiator-types.h  satiator.c  satiator.h
source images/: GAME1.xcf  Header.xcf
src/: bios.h  filelist.c  iapetus.h  main.c  satiator.c  types.h
states/: bootscreen.c  bootscreen.h  console_information.c  gamelist.c  gamelist.h  init.c  menu.c  menu.h  menu_options.c  menu_options.h  options.c  options.h  routine_states.c  routine_states.h  satiator_information.c  splash.c  splash.h  theme.c
(+64 files in other folders)
