project(exhello)
set(exhello_SOURCES exhello.c)
set(CMAKE_C_FLAGS "-O2 -Wall -m2 -DREENTRANT_SYSCALLS_PROVIDED")
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(${PROJECT_NAME} ${exhello_SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".bin")
target_link_libraries(${PROJECT_NAME} iapetus)
install(TARGETS ${PROJECT_NAME} DESTINATION "examples")
install(DIRECTORY "" DESTINATION "examples" FILES_MATCHING PATTERN "*.c")


project(exgui)
set(exgui_SOURCES exgui.c)
set(CMAKE_C_FLAGS "-O2 -Wall -m2 -DREENTRANT_SYSCALLS_PROVIDED")
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(${PROJECT_NAME} ${exgui_SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".bin")
target_link_libraries(${PROJECT_NAME} iapetus)
install(TARGETS ${PROJECT_NAME} DESTINATION "examples")
install(DIRECTORY "" DESTINATION "examples" FILES_MATCHING PATTERN "*.c")
